Alignment fixes
Prefix done too

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-
-/* SEARCH BLOCK */
-
 .search_block_h1 {
     font-weight: 700;
     font-size: 22px;
@@ -395,7 +392,8 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -440,7 +438,7 @@
     background-color: white;
     border: 5px solid white;
     border-radius: 20px 20px 20px 20px;
-    margin: 0 0 0 0;
+    margin: 10px 0;
     -webkit-transition: ease .1s;
     -o-transition: ease .1s;
     transition: ease .1s;
@@ -455,6 +453,7 @@
             flex-direction: row;
     width: 82%;
     min-width: 275px;
+    max-height: 154px;
 }
 
 .hostings_popular_card:hover {
@@ -483,6 +482,7 @@
     height: 144px;
     width: 137px;
     margin: 0 0 0 0;
+    min-width: 137px;
 }
 
 .hosting_popular_card_container_title {
@@ -500,6 +500,7 @@
 
 .hostings_popular_card_rating {
     margin: 24px 16px 4px 16px;
+    margin: 0px 16px 4px 16px;
 }
 
 .hostings_popular_card_container_text {
@@ -598,6 +599,10 @@
             -ms-flex-direction: row;
                 flex-direction: row;
         padding: 0 0 45px;
+        margin: 0 50px;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
 
     .hostings_popular_card_img {
@@ -605,10 +610,12 @@
     }
 
     .hostings_popular_card {
-        margin: 0 10px;
-        justify-content: center;
+        /* margin: 0 10px; */
+        -webkit-box-pack: left;
+            -ms-flex-pack: left;
+                justify-content: left;
         max-width: 320px;
-        margin: 0 0 10px 0;
+        margin: 10px 10px;
     }
 
     .hostings_popular_card_container {
@@ -721,6 +728,10 @@
         min-width: 0px;
         width: 100%;
         margin: 0 0 24px 0;
+        max-width: none;
+        -webkit-box-pack: left;
+            -ms-flex-pack: left;
+                justify-content: left;
     }
 
     .hostings_popular_card_container {
